-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 23
-
Component/s: hotspot
-
b12
-
aarch64
-
linux
Command Line: java -XX:InitialCodeCacheSize=1024K -XX:ReservedCodeCacheSize=1200k -version
Info:
[0.097s][warning][codecache] CodeCache is full. Compiler has been disabled.
[0.097s][warning][codecache] Try increasing the code cache size using -XX:ReservedCodeCacheSize=
OpenJDK 64-Bit Server VM warning: CodeCache is full. Compiler has been disabled.
OpenJDK 64-Bit Server VM warning: Try increasing the code cache size using -XX:ReservedCodeCacheSize=
CodeCache: size=1200Kb used=1042Kb max_used=1042Kb free=157Kb
bounds [0x0000ffffa4d09000, 0x0000ffffa4e35000, 0x0000ffffa4e35000]
total_blobs=587 nmethods=0 adapters=560
compilation: disabled (not enough contiguous free space left)
stopped_count=1, restarted_count=0
full_count=1
OpenJDK 64-Bit Server VM warning: C1 initialization failed. Shutting down all compilers
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000ffffa5b3d818, pid=23384, tid=23398
#
# JRE version: OpenJDK Runtime Environment (23.0) (fastdebug build 23-internal-adhoc.sunguoyun.jdk-ls)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 23-internal-adhoc.sunguoyun.jdk-ls, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x8e6818] CompilationFailureInfo::CompilationFailureInfo(char const*)+0xb0
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/sunguoyun/jdk-ls/hs_err_pid23384.log
Info:
[0.097s][warning][codecache] CodeCache is full. Compiler has been disabled.
[0.097s][warning][codecache] Try increasing the code cache size using -XX:ReservedCodeCacheSize=
OpenJDK 64-Bit Server VM warning: CodeCache is full. Compiler has been disabled.
OpenJDK 64-Bit Server VM warning: Try increasing the code cache size using -XX:ReservedCodeCacheSize=
CodeCache: size=1200Kb used=1042Kb max_used=1042Kb free=157Kb
bounds [0x0000ffffa4d09000, 0x0000ffffa4e35000, 0x0000ffffa4e35000]
total_blobs=587 nmethods=0 adapters=560
compilation: disabled (not enough contiguous free space left)
stopped_count=1, restarted_count=0
full_count=1
OpenJDK 64-Bit Server VM warning: C1 initialization failed. Shutting down all compilers
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000ffffa5b3d818, pid=23384, tid=23398
#
# JRE version: OpenJDK Runtime Environment (23.0) (fastdebug build 23-internal-adhoc.sunguoyun.jdk-ls)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 23-internal-adhoc.sunguoyun.jdk-ls, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x8e6818] CompilationFailureInfo::CompilationFailureInfo(char const*)+0xb0
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/sunguoyun/jdk-ls/hs_err_pid23384.log
- relates to
-
JDK-8318444 Write details about compilation bailouts into crash reports
-
- Resolved
-
-
JDK-8326615 C1/C2 don't handle allocation failure properly during initialization (RuntimeStub::new_runtime_stub fatal crash)
-
- Closed
-
-
JDK-8330157 C2: Add a stress flag for bailouts
-
- Resolved
-