src/hotspot/share/compiler/compilationFailureInfo.cpp
@@ -42,11 +42,11 @@
 #include "utilities/ostream.hpp"
 #include "utilities/nativeCallStack.hpp"
 
-CompilationFailureInfo::CompilationFailureInfo(const char* failure_reason) :
+CompilationFailureInfo::CompilationFailureInfo(const char* failure_reason, int compile_id) :
   _stack(2),
   _failure_reason(os::strdup(failure_reason)),
   _elapsed_seconds(os::elapsedTime()),
-  _compile_id(ciEnv::current()->task()->compile_id())
+  _compile_id(compile_id)
 {}
 
 CompilationFailureInfo::~CompilationFailureInfo() {
